--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(primer-proyecto)
 
 set(CMAKE_CXX_STANDARD 11)
 
+# Log
+set(LOGGER logger/Logger.cpp logger/Logger.h)
+
 # Exceptions
 set(MKNOD_EXCEPTION Exceptions/MKNODException.cpp Exceptions/MKNODException.h)
 set(FILE_EXIST_EXCEPTION Exceptions/FileExistsException.cpp Exceptions/FileExistsException.h)
@@ -13,11 +16,11 @@ set(FIFO IPC/Fifo/Fifo.cpp IPC/Fifo/Fifo.h IPC/Fifo/FifoReader.cpp IPC/Fifo/Fifo
 
 # Portal
 set(PORTAL_SOURCES Portal/PortalApp.cpp Portal/PortalController.cpp Portal/PortalController.h)
-add_executable(portal ${PORTAL_SOURCES} ${FIFO})
+add_executable(portal ${PORTAL_SOURCES} ${FIFO} ${LOGGER})
 
 # ClientController
 set(CLIENT_SOURCES Client/ClientApp.cpp Client/ClientController.cpp Client/ClientController.h)
-add_executable(client ${CLIENT_SOURCES} ${FIFO})
+add_executable(client ${CLIENT_SOURCES} ${FIFO} ${LOGGER})
 
 # Weather microservice
 set(WEATHER_MS_SOURCES Weather/City.cpp Weather/City.h Weather/WeatherMicroserviceApp.cpp
@@ -28,3 +31,5 @@ add_executable(weather_ms ${WEATHER_MS_SOURCES})
 set(TEST_CATCH test/catch.hpp)
 set(FIFO_TEST test/FifoTest/FifoTest.cpp ${TEST_CATCH} ${FIFO})
 add_executable(tests ${FIFO_TEST})
+
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/logs)
