--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,18 +14,21 @@ set(FILE_EXIST_EXCEPTION Exceptions/FileExistsException.cpp Exceptions/FileExist
 set(FIFO IPC/Fifo/Fifo.cpp IPC/Fifo/Fifo.h IPC/Fifo/FifoReader.cpp IPC/Fifo/FifoReader.h
         IPC/Fifo/FifoWriter.cpp IPC/Fifo/FifoWriter.h ${MKNOD_EXCEPTION} ${FILE_EXIST_EXCEPTION})
 
+# Commons
+set(COMMONS Commons/Message.h)
+
 # Portal
 set(PORTAL_SOURCES Portal/PortalApp.cpp Portal/PortalController.cpp Portal/PortalController.h)
-add_executable(portal ${PORTAL_SOURCES} ${FIFO} ${LOGGER})
+add_executable(portal ${PORTAL_SOURCES} ${FIFO} ${LOGGER} ${COMMONS})
 
 # ClientController
 set(CLIENT_SOURCES Client/ClientApp.cpp Client/ClientController.cpp Client/ClientController.h)
-add_executable(client ${CLIENT_SOURCES} ${FIFO} ${LOGGER})
+add_executable(client ${CLIENT_SOURCES} ${FIFO} ${LOGGER} ${COMMONS})
 
 # Weather microservice
 set(WEATHER_MS_SOURCES Weather/City.cpp Weather/City.h Weather/WeatherMicroserviceApp.cpp
         Weather/WeatherMicroservice.cpp Weather/WeatherMicroservice.h)
-add_executable(weather_ms ${WEATHER_MS_SOURCES} ${FIFO})
+add_executable(weather_ms ${WEATHER_MS_SOURCES} ${FIFO} ${COMMONS})
 
 # Test
 set(TEST_CATCH test/catch.hpp)
