--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(primer-proyecto)
 set(CMAKE_CXX_STANDARD 11)
 
 # Log
-set(LOGGER logger/Logger.cpp logger/Logger.h)
+set(LOGGER Logger/Logger.cpp Logger/Logger.h)
 
 # Exceptions
 set(MKNOD_EXCEPTION Exceptions/MKNODException.cpp Exceptions/MKNODException.h)
@@ -36,8 +36,8 @@ set(CLIENT_SOURCES Client/ClientApp.cpp Client/ClientController.cpp Client/Clien
 add_executable(client ${CLIENT_SOURCES} ${FIFO} ${LOGGER} ${COMMONS})
 
 # Test
-set(TEST_CATCH test/catch.hpp)
-set(FIFO_TEST test/FifoTest/FifoTest.cpp ${TEST_CATCH} ${FIFO})
+set(TEST_CATCH Test/catch.hpp)
+set(FIFO_TEST Test/FifoTest/FifoTest.cpp ${TEST_CATCH} ${FIFO})
 add_executable(tests ${FIFO_TEST})
 
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/logs)
